# tower-upgrade-advisor

./: .gitignore  AGENTS.md  Makefile  README.md  app.py  pyproject.toml  render.yaml  requirements.txt
data/: lab_research.json  upgrades.json
docs/: assumptions.md  brief.md  copilot_context_summary.md  cursor_runbook.md  data_schema.md  decisions.md  execution_checklist.md  extraction_playbook.md  game_and_project_context.md  macos_setup.md  migration_checklist.md  plan_algorithm.md  plan_architect.md  plan_data.md  plan_reliability.md  plan_ui.md  research_notes.md  scoring.md  todo_now.md  transfer_pack.md  windows_setup.md
prompts/: cursor_kickoff.md
scripts/: collect_artifacts.py  extract_data.py  merge_data.py  parse_github_data.py
src/: __init__.py  data_loader.py  models.py  profile_manager.py  scoring.py
static/: style.css
templates/: base.html  dashboard.html  index.html  recommend.html
templates/partials/: coins_and_recommend.html  coins_display.html  recommendation_table.html  upgrade_row.html
tests/: conftest.py  test_data_loader.py  test_models.py  test_profile_manager.py  test_scoring.py
tests/fixtures/: test_upgrades.json
