[project]
name = "tower-upgrade-advisor"
version = "0.1.0"
description = "Recommends the best next permanent upgrade in The Tower (idle tower defense)"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "gunicorn>=22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
]
extract = [
    "playwright>=1.40",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests",
]
addopts = "-x -q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
